@@ -206,3 +206,7 @@ class tx_becookies_backendHook implements t3lib_Singleton {
 		return $domains;
 	}
 }
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/becookies/hooks/class.tx_becookies_backendHook.php']) {
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/becookies/hooks/class.tx_becookies_backendHook.php']);
+}
